Fix a CSS align bug

--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ hr{
   justify-content: center;
   align-items: center;
   margin-top: 25px;
-  margin-left: -17px;
+  margin-left: -4%;
 }
 
 .card-footer-stats-item{
